tests/transpiler/x/ocaml/nested_function.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let rec outer x =
let rec inner y =
  (x + y)

  inner 5

let () =
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [string_of_int (outer 3)]));
